--- a/package.json
+++ b/package.json
@@ -10,16 +10,29 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.26.5",
-    "del": "^5.0.0",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-concat": "^2.6.1",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-uglify": "^3.0.2",
     "normalize.css": "^8.0.1"
   },
   "dependencies": {
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "browserslist": [
+      "> 1%",
+      "ie >= 8",
+      "edge >= 15",
+      "ie_mob >= 10",
+      "ff >= 45",
+      "chrome >= 45",
+      "safari >= 7",
+      "opera >= 23",
+      "ios >= 7",
+      "android >= 4",
+      "bb >= 10"
+    ]
   }
 }
