added accordion, form and contact section

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "normalize.css": "^8.0.1"
   },
   "dependencies": {
-    "slick-carousel": "^1.8.1",
     "browserslist": [
       "> 1%",
       "ie >= 8",
@@ -33,6 +32,8 @@
       "ios >= 7",
       "android >= 4",
       "bb >= 10"
-    ]
+    ],
+    "fullpage.js": "^3.0.9",
+    "slick-carousel": "^1.8.1"
   }
 }
